# python-sdk

./: README.md  pyproject.toml
cacp_sdk/: __init__.py  agents.py  api_keys.py  auth.py  client.py  config.py  exceptions.py  groups.py  messaging.py  models.py  phoenix_channel.py  sync_client.py  tasks.py  websocket.py
examples/: basic_agent.py  langchain_integration.py  messaging.py  rpc.py  semantic_search.py  websocket.py
tests/: __init__.py  test_agents.py  test_client.py  test_error_mapping.py  test_messaging.py  test_models.py  test_phoenix_channel.py  test_sync_client.py  test_tasks.py  test_websocket.py
