[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cacp-sdk"
version = "0.1.0"
description = "Official Python SDK for CACP - Cross-Agent Communication Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CACP Team", email = "support@cacp.io" }
]
keywords = [
    "ai",
    "agents",
    "messaging",
    "rpc",
    "broker",
    "cacp",
    "langchain",
    "autogen",
    "crewai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://cacp.io"
Documentation = "https://docs.cacp.io"
Repository = "https://github.com/cacp/cacp"
Issues = "https://github.com/cacp/cacp/issues"

[tool.hatch.build.targets.wheel]
packages = ["cacp_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
